<resources>
    <string name="app_name">RecyclerView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insertar">Insertar</string>
    <string name="objetivos">Objetivos</string>
    <string name="n_mero_de_jugadores">Número de jugadores</string>
    <string name="nombre">Nombre</string>
    <string name="ajustes">Ajustes</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    <string name="elige_una_fecha">Elige una fecha</string>
    <string name="url_imagen">url de la imagen</string>
</resources>