<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/frag2_tvId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/frag2_etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editarCliente_guiaSup" />

    <EditText
        android:id="@+id/frag2_etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/frag2_etJugadores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag2_tvId"/>

    <EditText
        android:id="@+id/frag2_etJugadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_mero_de_jugadores"
        android:inputType="number"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/frag2_etObjetivos"
        app:layout_constraintTop_toBottomOf="@+id/frag2_etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/frag2_etObjetivos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/objetivos"
        android:inputType="text"
        android:lines="3"
        android:singleLine="false"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/frag2_urlImagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag2_etJugadores" />

    <EditText
        android:id="@+id/frag2_urlImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_imagen"
        android:inputType="textUri"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/editarCliente_guiaInf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag2_etObjetivos" />

    <Button
        android:id="@+id/frag2_bInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertar"
        app:layout_constraintBottom_toTopOf="@id/frag2_bModificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editarCliente_guiaInf" />

    <Button
        android:id="@+id/frag2_bModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        app:layout_constraintBottom_toTopOf="@id/frag2_bBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag2_bInsertar" />

    <Button
        android:id="@+id/frag2_bBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag2_bModificar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editarCliente_guiaSup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/editarCliente_guiaInf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>


</androidx.constraintlayout.widget.ConstraintLayout>